<resources>
    <string name="app_name">ExampleGreenDAO</string>
    <string name="add">Add</string>
    <string name="unknown">Unknown</string>
    <string name="delete">Delete</string>
    <string name="hint">Press on user item to update info</string>
    <string name="get_all">Get all</string>
    <string name="user_name">User name</string>
    <string name="age">Age</string>
    <string name="clear">Clear view</string>
</resources>
